Added some design and new activity.

--- a/app/src/main/res/layout/profile_layout.xml
+++ b/app/src/main/res/layout/profile_layout.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:elevation="10dp"
-    android:background="@drawable/custom_button">
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:id="@+id/img"
-        android:elevation="20dp">
-    </ImageView>
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@id/img"
-        android:textSize="30dp"
-        android:id="@+id/tv"
-        android:elevation="20dp"
-        >
-    </TextView>
-    <Button
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:layout_below="@+id/tv"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button"
-        android:text="Github"
-        android:elevation="20dp"
-        android:background="@drawable/custom_button1"></Button>
+        android:id="@+id/rl2"
+        android:elevation="10dp"
+        android:background="@drawable/custom_button">
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/img"
+            android:src="@drawable/custom_button">
+        </de.hdodenhof.circleimageview.CircleImageView>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/img"
+            android:textSize="30dp"
+            android:id="@+id/tv"
+            >
+        </TextView>
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/tv"
+            android:layout_marginLeft="20dp"
+            android:layout_toRightOf="@id/img"
+            android:id="@+id/button"
+            android:text="Github"
+            android:background="@drawable/custom_button1"></Button>
+    </RelativeLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="15dp"
+    android:background="@color/WHITE"
+    android:layout_below="@id/rl2">
+</RelativeLayout>
+
 
 </RelativeLayout>
