--- a/app/src/main/res/layout/filter_layout.xml
+++ b/app/src/main/res/layout/filter_layout.xml
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:background="@drawable/custom_button"
-    android:elevation="10dp">
-
-    <TextView
+    android:layout_width="match_parent" android:layout_height="wrap_content">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="100dp"
-        android:textSize="20dp"
-        android:id="@+id/tv5">
-    </TextView>
-
+        android:id="@+id/rl4"
+        android:background="@drawable/custom_button"
+        android:elevation="10dp">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="100dp"
+            android:textSize="20dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/tv5">
+        </TextView>
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/ib1"
+            android:layout_centerInParent="true"
+            android:background="@color/colorBlock"
+            ></ImageButton>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/WHITE"
+        android:layout_below="@id/rl4"></RelativeLayout>
 </RelativeLayout>
