--- a/app/src/main/res/layout/item_lauout.xml
+++ b/app/src/main/res/layout/item_lauout.xml
@@ -4,27 +4,36 @@
     android:id="@+id/text1"
 
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/custom_button"
-    android:elevation="10dp">
+    android:layout_height="wrap_content">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textSize="30dp"
-        android:id="@+id/tv1"
-        android:elevation="20dp"
-        >
-    </TextView>
+        android:id="@+id/rl1"
+        android:elevation="10dp"
+        android:background="@drawable/custom_button">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="30dp"
+            android:id="@+id/tv1"
+            >
+        </TextView>
 
-    <TextView
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp"
+            android:textSize="20dp"
+            android:id="@+id/tv2"
+            >
+        </TextView>
+    </RelativeLayout>
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:textSize="20dp"
-        android:id="@+id/tv2"
-        android:elevation="20dp"
-        >
-    </TextView>
+        android:layout_height="15dp"
+        android:layout_below="@id/rl1"
+        android:background="@color/WHITE"></RelativeLayout>
 </RelativeLayout>
