--- a/app/src/main/res/layout/skill_layout.xml
+++ b/app/src/main/res/layout/skill_layout.xml
@@ -2,28 +2,40 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="100"
-    android:elevation="10dp"
-    android:background="@drawable/custom_button">
-    <TextView
+    android:layout_weight="100">
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="100dp"
-        android:textSize="20dp"
-        android:id="@+id/tv3">
-    </TextView>
+        android:id="@+id/rl3"
+        android:elevation="10dp"
+        android:background="@drawable/custom_button">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="100dp"
+            android:textSize="20dp"
+            android:layout_marginBottom="10dp"
+            android:id="@+id/tv3">
+        </TextView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20dp"
-        android:id="@+id/tv4"
-        android:layout_marginLeft="350dp"
-        android:layout_marginTop="10dp"
-        >
-    </TextView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20dp"
+            android:id="@+id/tv4"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="10dp"
+            >
+        </TextView>
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="15dp"
+        android:background="@color/WHITE"
+        android:layout_below="@id/rl3"></RelativeLayout>
 
 
 </RelativeLayout>
